--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ source_group("external" FILES ${EXTERNAL_DIR})
 
 if(EMSCRIPTEN)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} \
-    -g --proxy-to-worker -O2"
+    -g --proxy-to-worker -O0"
   )
   set_target_properties(app PROPERTIES SUFFIX ".html")
   target_link_options(app PRIVATE 
@@ -59,7 +59,8 @@ if(EMSCRIPTEN)
     "-sENVIRONMENT='worker'" 
     "-sFETCH=1"
     "-sUSE_PTHREADS=1"
-    "-sASSERTIONS")
+    "-sASSERTIONS"
+    "-sSTACK_SIZE=1048576")
 else()
   add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
   set(DAWN_FETCH_DEPENDENCIES ON)
