--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -1,2 +1,2 @@
-file(GLOB SOURCES "*.cpp" "*.h") # Or other source file extensions
+file(GLOB SOURCES "*.cpp" "*.h" "*.c") # Or other source file extensions
 target_sources(${PROJECT_NAME} PRIVATE ${SOURCES})
